<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

        <TextView
        android:id="@+id/text_event"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />
    <Button
        android:id="@+id/button_initiateMeeting"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btnInitiateMeeting" />
    <Button
        android:id="@+id/button_viewPendingMeetingRequests"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btnViewPendingMeetingRequests" />
    <Button
        android:id="@+id/button_viewConfirmedMeetings"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/btnViewConfirmedMeetings" />



</LinearLayout>