<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

       <LinearLayout
    
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

       <Button
           android:id="@+id/btnSelectSlots"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btnSelectSlotsText" 
           android:onClick="onClick"/>

       <Button
           android:id="@+id/btnCancelSlotsSelection"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/btnCancelSlotsSelectionText" 
           android:onClick="onClick"/>
        
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" 
       />
    
</LinearLayout>
